Change History
==============

1.5rc3
------

 - Fixed fieldset settings 'Show Title as Legend'
   (Radim Novotny)

 - Boolean (checkbox) required field behavior was not as advertised. Probably due
   to a change in archetypes at some point. Making a checkbox required will now do
   nothing but show the required indicator. (Fixes #202, thanks Dylan Jay)

1.5rc2
------

 - Pruned tests directory from the Python Package. Installation had been failing
   on some Windows machines while copying the deeply nested tests. We're guessing
   that path length restrictions were exceeded. Those needing to run the tests
   should check out PFG from svn. (Steve)

 - Factored action adapter processing out of the fgvalidate method of the form
   folder, and added a 'skip_action_adapters' parameter to fgvalidate (default:
   False), so it's possible to validate without calling the action adapters, or
   vice versa. (David Glick)

1.5rc1
------

 - Add "action" to form tags for quick editor to be more XHTML compliant.
   (Thanks: jonstahl, #248)

 - Fix bad numbering of savedata_tabview 
   (gotcha)

 - Prevent the automatic action adapter activation handler from
   duplicating an adapter that is already activated. (Fixes #247)
   (David Glick)

 - Prevent creation of sample content when forms are imported from
   .zexp or schemas are recreated. (Fixes #218; Thanks Marie Robichon)

 - Added warning on startup if PFGCaptchaField is still installed.
   (David Glick)

 - The captcha field edit should not show default, length ...
   fields that are not relevant. (Steve)

 - If mail adapter received a UTF-8 subject where it expected unicode,
   a unicode decode error would result. Fixed. (Thanks, javimansilla)
   (merge from 1.2-Maintenance branch)

 - Corrected URL for audio captcha icon. (David Glick)

 - Added the CHANGES.txt to the long_description so that it show up on
   pypi, Hello World!  Also cleaned up the reST so that it will render 
   properly (claytron)

1.5b5
-----
