@@ -9,14 +9,14 @@
  <property name="content_meta_type">FormThanksPage</property>
  <property name="product">PloneFormGen</property>
  <property name="factory">addFormThanksPage</property>
- <property name="immediate_view">fg_thankspage_view</property>
+ <property name="immediate_view">fg_thankspage_view_p3</property>
  <property name="global_allow">False</property>
  <property name="filter_content_types">False</property>
  <property name="allowed_content_types"/>
  <property name="allow_discussion">False</property>
- <property name="default_view">fg_thankspage_view</property>
+ <property name="default_view">fg_thankspage_view_p3</property>
  <property name="view_methods">
-  <element value="fg_thankspage_view"/>
+  <element value="fg_thankspage_view_p3"/>
  </property>
  <property name="default_view_fallback">False</property>
  <alias from="(Default)" to="(dynamic view)"/>
